# suitesparse-metis-for-windows

./: .gitignore  CMakeLists.txt  checkGetSuiteSparse.cmake
SuiteSparse/: CMakeLists.txt
SuiteSparse/CHOLMOD/: CMakeLists.txt
